; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_dump.c_json_dumps.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_dump.c_json_dumps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dump_to_strbuffer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @json_dumps(i32* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = call i64 @strbuffer_init(i32* %6)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %25

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @dump_to_strbuffer, align 4
  %14 = bitcast i32* %6 to i8*
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @json_dump_callback(i32* %12, i32 %13, i8* %14, i64 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  store i8* null, i8** %7, align 8
  br label %22

19:                                               ; preds = %11
  %20 = call i32 @strbuffer_value(i32* %6)
  %21 = call i8* @jsonp_strdup(i32 %20)
  store i8* %21, i8** %7, align 8
  br label %22

22:                                               ; preds = %19, %18
  %23 = call i32 @strbuffer_close(i32* %6)
  %24 = load i8*, i8** %7, align 8
  store i8* %24, i8** %3, align 8
  br label %25

25:                                               ; preds = %22, %10
  %26 = load i8*, i8** %3, align 8
  ret i8* %26
}

declare dso_local i64 @strbuffer_init(i32*) #1

declare dso_local i64 @json_dump_callback(i32*, i32, i8*, i64) #1

declare dso_local i8* @jsonp_strdup(i32) #1

declare dso_local i32 @strbuffer_value(i32*) #1

declare dso_local i32 @strbuffer_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
